--- a/src/pages/AuthPage/styles/input.css
+++ b/src/pages/AuthPage/styles/input.css
@@ -23,6 +23,7 @@
   background-color: #2c698d;
   color: white;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
 }
 
@@ -32,7 +33,7 @@
 }
 
 .formRow {
-  height: 14%;
+  height: 15%;
   margin-top: 10px;
   display: flex;
   gap: 5%;
@@ -43,7 +44,7 @@
 }
 
 .formInput {
-  height: 14%;
+  height: 15%;
   width: 100%;
   margin-top: 10px;
   display: flex;
@@ -52,4 +53,16 @@
 
 .formInput input {
   padding: 15px;
+}
+
+.formInput span {
+  color: #11d0da;
+  padding-top: 1%;
+  font-size: 1rem;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
+  display: none;
+}
+.formInput input:invalid + span {
+  display: block;
 }
