--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,7 @@
 body{
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 1rem;
+    font-size: 1rem;
     font-style: normal;
     width: 100vw;
     height: 100vh;
