--- a/src/pages/AuthPage/styles/input.css
+++ b/src/pages/AuthPage/styles/input.css
@@ -18,7 +18,7 @@
 }
 
 .form form button {
-  margin-top: 20px;
+  margin-top: 5%;
   padding: 15px;
   background-color: #2c698d;
   color: white;
@@ -34,7 +34,7 @@
 
 .formRow {
   height: 15%;
-  margin: 10px 0px;
+  margin: 3% 0px;
   display: flex;
   gap: 5%;
 }
@@ -43,22 +43,26 @@
   height: 90%;
 }
 
+.formRow .formInput input {
+  padding: 6%;
+}
+
 .formInput {
   height: 15%;
   width: 100%;
-  margin: 10px 0px;
+  margin: 2% 0px;
   display: flex;
   flex-direction: column;
 }
 
 .formInput input {
-  padding: 15px;
+  padding: 3%;
 }
 
 .formInput span {
   color: #11d0da;
   margin-top: 1%;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: "DM Sans", sans-serif;
   font-weight: 400;
   display: none;
