--- a/src/global.css
+++ b/src/global.css
@@ -1,17 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: #272643;
-    list-style: none;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #272643;
+  list-style: none;
+  text-decoration: none;
 }
 
-body{
-    font-family: "DM Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-size: 1rem;
-    font-style: normal;
-    width: 100vw;
-    height: 100vh;
+body {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-size: 1rem;
+  font-style: normal;
+  width: 100vw;
+  height: 100vh;
 }
