--- a/src/pages/AuthPage/styles/AuthPageForm.css
+++ b/src/pages/AuthPage/styles/AuthPageForm.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   font-family: "Poppins", sans-serif;
   font-weight: bold;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 .HeaderForm {
@@ -15,6 +15,7 @@
   justify-content: center;
   align-items: center;
   gap: 20%;
+  margin-bottom: 2%;
 }
 
 .HeaderForm li span {
