--- a/src/pages/AuthPage/styles/input.css
+++ b/src/pages/AuthPage/styles/input.css
@@ -18,7 +18,7 @@
 }
 
 .form form button {
-  margin-top: 5%;
+  margin-top: 3%;
   padding: 15px;
   background-color: #2c698d;
   color: white;
@@ -34,9 +34,9 @@
 
 .formRow {
   height: 15%;
-  margin: 3% 0px;
+  margin-bottom: 3.5%;
   display: flex;
-  gap: 5%;
+  gap: 4%;
 }
 
 .formRow .formInput {
@@ -44,19 +44,21 @@
 }
 
 .formRow .formInput input {
-  padding: 6%;
+  padding: 5%;
 }
 
 .formInput {
   height: 15%;
   width: 100%;
-  margin: 2% 0px;
+  margin-bottom: 3.5%;
   display: flex;
   flex-direction: column;
 }
 
 .formInput input {
-  padding: 3%;
+  border: 1px solid black;
+  font-size: 1rem;
+  padding: 2.5%;
 }
 
 .formInput span {
