--- a/src/pages/HomePage/styles/HomePage.css
+++ b/src/pages/HomePage/styles/HomePage.css
@@ -32,20 +32,29 @@
   padding: 0 8%;
 }
 
-.SideBar nav li {
+.SideBar nav a {
   display: flex;
   align-items: center;
   gap: 1rem;
   padding: 1rem;
   border-radius: 0.5rem;
-  transition: background-color 0.3s;
+  transition: all 0.4s ease-in-out;
   font-size: 1.4rem;
   padding-left: 10%;
-  background-color: #2c698d;
+
+  * {
+    font-size: 1.6rem;
+  }
 }
 
-.SideBar nav li * {
+.SideBar nav a.active {
+  background-color: #2c698d;
+  font-weight: 700;
   color: white;
+
+  * {
+    color: white;
+  }
 }
 
 .Main {
@@ -54,5 +63,5 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  padding: 2%;
 }
