--- a/src/pages/HomePage/Feed/Styles/Feed.css
+++ b/src/pages/HomePage/Feed/Styles/Feed.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .Feed nav {
@@ -11,6 +12,7 @@
   flex-direction: row-reverse;
   gap: 4%;
   font-size: 1.3rem;
+  margin-bottom: 2%;
 }
 
 .Feed nav button {
