--- a/src/pages/HomePage/styles/HomePage.css
+++ b/src/pages/HomePage/styles/HomePage.css
@@ -2,11 +2,17 @@
   display: flex;
   height: 100vh;
   width: 100vw;
+  padding: 2% 5%;
 }
 
 .Container div {
   display: flex;
   flex-direction: column;
+}
+
+.Placeholder {
+  width: 20%;
+  height: 100%;
 }
 
 .SideBar {
@@ -16,6 +22,9 @@
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+  position: fixed;
 }
 
 .SideBar img {
@@ -63,5 +72,4 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2%;
 }
