--- a/src/pages/HomePage/Feed/Styles/Feed.css
+++ b/src/pages/HomePage/Feed/Styles/Feed.css
@@ -25,3 +25,21 @@
   background-color: whitesmoke;
   font-weight: 700;
 }
+
+.fixed-btn {
+  position: fixed;
+  right: 100px;
+  bottom: 50px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: none;
+  background-color: #007bff;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.fixed-btn:hover {
+  background-color: #0056b3;
+}
