--- a/src/pages/HomePage/Feed/Styles/Post_Comments.css
+++ b/src/pages/HomePage/Feed/Styles/Post_Comments.css
@@ -1,16 +1,17 @@
 .comments {
   background-color: #f2f2f2;
   border-radius: 5px;
-  margin-top: 20px;
   border-radius: 30px;
+  margin-top: 10px;
   height: 0px;
   opacity: 0;
   overflow: hidden;
-  transition: opacity 0.5s, height 0.5s, padding 0.3s;
+  transition: opacity 0.5s, height 0.8s, padding 0.6s;
   overflow-y: hidden;
   overflow-x: hidden;
   padding: 0px;
   word-wrap: break-word;
+  width: 100%;
 }
 
 .comments::-webkit-scrollbar {
@@ -28,15 +29,23 @@
 
 .comments.show {
   opacity: 1;
-  height: 30vh;
+  height: 25vh;
+  max-height: 30vh;
   overflow-y: auto;
   padding: 5%;
+}
+
+.comments section {
+  max-width: 40vw;
+}
+
+.comments section p {
+  margin-top: 15px;
 }
 
 .input-section {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
 }
 
 .input-section textarea {
@@ -44,11 +53,11 @@
   padding: 15px;
   border-radius: 15px;
   border: 1px solid #ccc;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .input-section button {
-  margin-left: 75%;
+  margin-left: 60%;
   padding: 10px 5px;
   background-color: #5c8cae;
   color: white;
