--- a/src/pages/HomePage/MyProfile/Styles/input.css
+++ b/src/pages/HomePage/MyProfile/Styles/input.css
@@ -1,22 +1,44 @@
 .form-Home {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: start;
-  position: relative;
-  width: 60%;
+  width: 80%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: row !important;
 }
 
-.form-Home form {
+.form-Home div {
+  width: 70%;
+  height: 100%;
+  position: relative;
+}
+
+.form-Home button {
+  width: 40%;
+  height: 8%;
+  background-color: #2c698d;
+  color: white;
+}
+
+.form-Home div form {
+  padding: 5%;
   height: 100%;
   width: 100%;
+  display: absolute;
   transition: opacity 0.5s;
   flex-direction: column;
   visibility: visible;
   position: absolute;
   display: flex;
   opacity: 1;
+}
+
+.form-Home form .formInput {
+  width: 100%;
+  height: 10%;
 }
 
 .form-Home form button {
@@ -27,4 +49,6 @@
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  width: 100%;
+  height: 7%;
 }
