--- a/src/pages/AdminPage/Styles/AdminPage.css
+++ b/src/pages/AdminPage/Styles/AdminPage.css
@@ -7,12 +7,31 @@
   width: 100vw;
 }
 
-.AdminPage h1 {
+.AdminPage .TabsNavigate {
   height: 10%;
   margin-bottom: 20px;
   font-family: "Poppins", sans-serif;
-  font-size: 2rem;
+  font-size: 1.2rem;
   font-weight: bold;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.AdminPage .TabsNavigate button {
+  transition: all 0.3s ease-in;
+  background-color: whitesmoke;
+  font-weight: 700;
+  border-radius: 15px;
+  padding: 0% 5%;
+}
+
+.AdminPage .TabsNavigate button.active {
+  background-color: #5c8cae;
+  color: white;
+  font-weight: 700;
+  border-radius: 15px;
+  padding: 0% 5%;
 }
 
 .AdminPage div {
@@ -27,7 +46,6 @@
 }
 
 .AdminPage div section {
-  margin-top: 1%;
   height: 90%;
   display: flex;
   flex-direction: column;
@@ -46,9 +64,15 @@
 }
 
 .AdminPage div nav button {
-  background-color: #5c8cae;
+  background-color: whitesmoke;
   padding: 5% 10%;
-  border-radius: 15px;
+  border-radius: 15px 15px 0px 0px;
+  color: black;
+  transition: all 0.3s ease-in;
+}
+
+.AdminPage div nav button.active {
+  background-color: #5c8cae;
   color: white;
 }
 
