--- a/src/pages/AdminPage/Styles/AdminPage.css
+++ b/src/pages/AdminPage/Styles/AdminPage.css
@@ -36,7 +36,7 @@
 
 .AdminPage div {
   width: 100%;
-  height: 90%;
+  height: 90% !important;
 }
 
 .AdminPage div nav {
@@ -77,7 +77,7 @@
 }
 
 .AdminPage div section div {
-  height: 10vh;
+  height: 10% !important;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -106,7 +106,7 @@
   border: 1px solid #ddd;
   padding: 8px;
   text-align: left;
-  height: 50px;
+  height: 70px;
 }
 
 .AdminPage div section th {
@@ -120,4 +120,17 @@
 
 .AdminPage div section tr:hover {
   background-color: #ddd;
+}
+
+.AdminPage div section td {
+  gap: 10px;
+}
+
+.AdminPage div section td button {
+  background-color: #5c8cae;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
 }
